test/spec_vectors/simd_bit_shift/fail/module_13.wat
(module (func (result v128) (i64x2.shr_u (i32.const 0) (i32.const 0))))